src/main.css
:root {
  --default-color: rgba(34, 36, 37, 1);
  --background-color-white: white;
  --text-color: rgba(34, 36, 37, 1);
  --button-color: white;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  font-family: "Roboto Slab", serif;
  font-weight: 400;
  background-color: var(--default-color);
}

/*Start of Navigation Bar*/
.navbar {
  width: 100%;
  height: 60px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  background-color: var(--default-color);
  position: fixed;
  font-size: 16px;
}
.nav-title > h2 > a {
  padding-left: 20px;
  text-decoration: none;
  color: white;
}
.nav-title > h2 > a:hover {
  color: #0c0c32;
}
.nav-items {
  display: inline-block;
  list-style: none;
  padding: 15px;
  font-size: 18px;
}
.nav-items > a {
  text-decoration: none;
  color: white;
}

.nav-items > a:hover {
  color: bisque;
  transition: 0.25s;
}
.nav-items > a > i {
  padding-right: 3px;
}
/*Start of Dark & Light Mode*/
.light-dark {
 
}
.light-dark > i {
  color: white;
  cursor: pointer;
  padding: 5px;
}

.light-theme.active {
  background-color: white;
  color: var(--default-color);
}

/*End of Dark & Light Mode*/

/*End of Navigation Bar*/

/*Start of Global Classes*/
.main-header {
  text-align: center;
  font-size: 30px;
  font-weight: 700;
  padding: 10px;
  color: white;
}
/*End of Global Classes*/

.Hero {
  width: 100%;
}
.About {
  width: 100%;
}

/*Start of Projects*/
.Projects {
  width: 100%;
  height: auto;
}

/*End of Projects*/

/*Start of Contact Section*/
.Contacts {
  width: 100%;
}

.cntct-list > li {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  list-style: none;
}
.cntct-items {
  color: black;
  text-decoration: none;
}
/*End of Contact Section*/

/*Start of Media Queries*/
@media (min-width: 650px) {
  .nav-items > a > i {
    display: none;
  }
}
@media screen and (max-width: 650px) {
  .navlist {
    position: fixed;
    height: 100px;
    width: 100%;
    left: 0;
    bottom: 0;
    background-color: var(--default-color);
    height: 60px;
    display: flex;
    justify-content: center;
    align-items: center;
  }
  .nav-items > a {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
  }
  .prjct-list > div {
    width: auto;
  }
}
/*End of Media Queries*/

